The input must be encoded text.

+++
** The 'clone-indirect-buffer-hook' is now run by 'make-indirect-buffer'.
It was previously only run by 'clone-indirect-buffer' and
'clone-indirect-buffer-other-window'.  Since 'make-indirect-buffer' is
called by both of these, the hook is now run by all 3 of these
functions.


* Lisp Changes in Emacs 29.1

--
** New function 'bidi-string-strip-control-characters'.
This utility function is meant for displaying strings when it's
essential that there's no bidirectional context.

---
** The Gnus range functions have been moved to a new library, range.el.
All the old names have been made obsolete.

+++
** New function 'function-alias-p'.
This predicate says whether an object is a function alias, and if it
is, the alias chain is returned.

+++
** New variable 'lisp-directory' holds the directory of Emacs's own Lisp files.

+++
** New facility for handling session state: 'multisession-value'.
This can be used as a convenient way to store (simple) application
state, and 'M-x list-multisession-values' allows users to list
(and edit) this data.

+++
** New function 'get-display-property'.
This is like 'get-text-property', but works on the 'display' text
property.

+++
** New function 'add-text-display-property'.
This is like 'put-text-property', but works on the 'display' text
property.

+++
** New 'min-width' 'display' property.
This allows setting a minimum display width for a region of text.

+++
** New event type 'touch-end'.
This event is sent whenever the user's finger moves off the mouse
wheel on some mice, or when the user's finger moves off the touchpad.

+++
** New event type 'pinch'.
This event is sent when a user peforms a pinch gesture on a touchpad,
which is comprised of placing two fingers on the touchpad and moving
them towards or away from each other.

** Text security and suspiciousness

+++
*** New library textsec.el.
This library contains a number of checks for whether a string is